--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "next": "^13.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0"
@@ -19,7 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "13.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
